; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-omap2/extr_pm34xx.c_omap3_can_sleep.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-omap2/extr_pm34xx.c_omap3_can_sleep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @omap3_can_sleep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @omap3_can_sleep() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @omap_uart_can_sleep()
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %10

5:                                                ; preds = %0
  %6 = call i64 (...) @omap3_fclks_active()
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %5
  store i32 0, i32* %1, align 4
  br label %10

9:                                                ; preds = %5
  store i32 1, i32* %1, align 4
  br label %10

10:                                               ; preds = %9, %8, %4
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i32 @omap_uart_can_sleep(...) #1

declare dso_local i64 @omap3_fclks_active(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
